<resources>
    <string name="app_name">Tasker</string>
    <string name="today">Today</string>
    <string name="additional_functions">Additional functions</string>
    <string name="add_new_task">Add new task</string>
    <string name="lists">Lists</string>
    <string name="inbox">Inbox</string>
    <string name="one_task">1 task</string>
    <string name="example_for_task">Do not forget to pick up Alex from school</string>
    <string name="task_color">Task color</string>
    <string name="seven_pm">7:00 pm</string>
    <string name="calendar_image">Calendar image</string>
    <string name="alarm_image">Alarm image</string>

    <string name="cancel_dt">Cancel</string>
    <string name="done_dt">Done</string>
    <string name="query_task_dt">What do you want to do?</string>
</resources>