<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <CheckBox
        android:id="@+id/task_status"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:button="@drawable/round_checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/example_for_task"
        android:textColor="@color/lists_black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/alarm_img"
        app:layout_constraintEnd_toStartOf="@+id/task_color"
        app:layout_constraintStart_toEndOf="@+id/task_status"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calendar_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/calendar_image"
        android:src="@drawable/calendar"
        app:layout_constraintBottom_toTopOf="@+id/shadow_layout_end"
        app:layout_constraintStart_toStartOf="@+id/task"
        app:layout_constraintTop_toBottomOf="@id/task" />

    <TextView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/today"
        app:layout_constraintBottom_toBottomOf="@+id/calendar_img"
        app:layout_constraintStart_toEndOf="@+id/calendar_img"
        app:layout_constraintTop_toTopOf="@+id/calendar_img" />

    <ImageView
        android:id="@+id/alarm_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/alarm_image"
        android:src="@drawable/alarm"
        app:layout_constraintBottom_toBottomOf="@+id/calendar"
        app:layout_constraintStart_toEndOf="@+id/calendar"
        app:layout_constraintTop_toTopOf="@+id/calendar" />

    <TextView
        android:id="@+id/alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/seven_pm"
        app:layout_constraintBottom_toBottomOf="@+id/alarm_img"
        app:layout_constraintStart_toEndOf="@+id/alarm_img"
        app:layout_constraintTop_toTopOf="@+id/alarm_img" />

    <ImageView
        android:id="@+id/task_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/task_color"
        android:src="@drawable/list_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/task"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/shadow_layout_end"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/shadow_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/task"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>